--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,11 @@
   text-align: center;
 }
 
+.dataBox{
+  border: 10px solid green;
+  margin: 1rem auto;
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
